# PaperTree

./: .gitignore  LICENSE  PACKAGE_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
examples/: README.md  analyze_tree.py  basic_usage.py  export_json.py  export_postgres.py
paper_tree/: __init__.py  api.py  exceptions.py  exporters.py  models.py  tree_builder.py
tests/: __init__.py  test_models.py
