[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper_tree"
description = "A Python library for building and analyzing academic paper citation trees"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ClodLingxi"}
]
keywords = ["citation", "tree", "academic", "papers", "semantic", "scholar", "research", "reference", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
]

[tool.setuptools.dynamic]
version = { attr = "paper_tree.__version__" }

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
all = [
    "psycopg2-binary>=2.9.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/clodlingxi/paper_tree"
Documentation = "https://github.com/clodlingxi/paper_tree/blob/main/README.md"
Repository = "https://github.com/clodlingxi/paper_tree"
"Bug Tracker" = "https://github.com/clodlingxi/paper_tree/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
